Add select_list and show_list, rename upload_list

--- a/templates/upload_list.html
+++ b/templates/upload_list.html
@@ -5,9 +5,9 @@
 </head>
 <body>
     <h1>Upload a word list</h1>
-    <form method="post" action="upload_word_list">
+    <form method="post" action="upload_list">
         <p>Name of word list:</p>
-        <input name="word_list_name" type="text">
+        <input name="list_name" type="text">
         <p>Paste your words:</p>
         <textarea name="words"></textarea>
         <input type="submit" value="Upload">
