--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,11 @@
     <title></title>
 </head>
 <body>
-    <a href="upload_word_list">Upload word list</a>
+    <p>
+        <a href="upload_list">Upload list</a>
+    </p>
+    <p>
+        <a href="select_list">Select list</a>
+    </p>
 </body>
 </html>
