--- a/templates/index.html
+++ b/templates/index.html
@@ -10,5 +10,8 @@
     <p>
         <a href="select_list">Select list</a>
     </p>
+    <p>
+        <a href="view_mistakes">View mistakes</a>
+    </p>
 </body>
 </html>
